fix ios pwa status bar and application overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,11 @@
     height: 100%;
     overflow: hidden;
   }
-  .main {
-    padding-top: env(safe-area-inset-top);
-  }
   .arco-menu-light {
-    padding-top: env(safe-area-inset-top);
     padding-left: env(safe-area-inset-left);
   }
   body {
+    padding-top: env(safe-area-inset-top);
     min-height: 100vh;
   }
 }
